<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoytMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="false">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/allStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/allEndGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViwe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/allEndGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/allStart"
            app:layout_constraintTop_toTopOf="@+id/guidelineBottomConstraitLayout"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/listFloatingActionButtonListActivity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/addlistnot"
            android:src="@drawable/baseline_add_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1.1"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEndAddButton"
            app:layout_constraintStart_toStartOf="@+id/guidelineStartAddButton"
            app:layout_constraintTop_toTopOf="@+id/guidelineTopAddButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/NOTHING"
            android:textColor="@color/black"
            android:textSize="@dimen/_32ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/guidelineBottomTextView"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEndTextView"
            app:layout_constraintStart_toStartOf="@+id/guidelineStartTextView"
            app:layout_constraintTop_toTopOf="@+id/guidelineTopTextView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStartAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEndAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTopAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTopTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottomConstraitLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEndTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#EFD1C4"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViwe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/app_name"
                android:textColor="#AF5227"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineForRightTextView"
                app:layout_constraintStart_toStartOf="@id/guidelineAllStartForHeadActivity"
                app:layout_constraintTop_toTopOf="@+id/guidelineForTopTop" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineAllStartForHeadActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.02" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineForRightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineForTopTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineForLeftButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.82" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineAllEndForHeadActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.98" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:clickable="true"
                android:contentDescription="@string/setting"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_settings_24"
                app:backgroundTint="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guidelineAllEndForHeadActivity"
                app:layout_constraintStart_toStartOf="@+id/guidelineForLeftButton"
                app:layout_constraintTop_toTopOf="@+id/guidelineForTopTop"
                app:maxImageSize="@dimen/_45sdp"
                app:rippleColor="#EFD1C4"
                app:tint="#9f6246"
                tools:ignore="TouchTargetSizeCheck" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="عنوان تاریخ..."
                android:imeOptions="actionSearch"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:boxStrokeColor="@color/stroke_color"
                android:textSize="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
                app:layout_constraintStart_toStartOf="@+id/guidelineForRightTextView"
                app:layout_constraintTop_toTopOf="@+id/guidelineForTopTop"
                app:startIconDrawable="@drawable/baseline_search_24"
                app:startIconTint="#9F6246">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:gravity="start"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>